--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,7 +1,9 @@
 all: test.o Multigrid.h
-	g++ -o test test.o Multigrid.h -lblas
+	g++ -o test test.o Multigrid.h -lblas -std=c++11
 test.o:
-	g++ -c test.cpp
+	g++ -c test.cpp -std=c++11
 clean:
+	rm *.m
 	rm *.o
 	rm test
+
