--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,9 +1,15 @@
-all: test.o Multigrid.h
-	g++ -o test test.o Multigrid.h -lblas -std=c++11
-test.o:
-	g++ -c test.cpp -std=c++11
+all: main.o Multigrid.h
+	g++ -o main main.o Multigrid.h -lblas -std=c++11
+main.o:
+	g++ -c main.cpp -std=c++11
 clean:
+	rm *.o
+	rm main
+	rm *.m
+test:
+	g++ -c test.cpp -std=c++11
+	g++ -o test test.o Multigrid.h -lblas -std=c++11
+cleant:
 	rm *.o
 	rm test
 	rm *.m
-
