--- a/project2/Makefile
+++ b/project2/Makefile
@@ -49,6 +49,36 @@ test3:
 	matlab -nodesktop -nosplash -r V_cycle_1024
 	./main Inputfile/test34 > Outputfile/test34
 	matlab -nodesktop -nosplash -r V_cycle_1024
+test41:
+	./main Inputfile/test41
+test421:
+	./main Inputfile/test4211 > Outputfile/test421_128
+	./main Inputfile/test4212 > Outputfile/test421_256
+	./main Inputfile/test4213 > Outputfile/test421_512
+	./main Inputfile/test4214 > Outputfile/test421_1024
+test422:
+	./main Inputfile/test4221 > Outputfile/test422_128
+	./main Inputfile/test4222 > Outputfile/test422_256
+	./main Inputfile/test4223 > Outputfile/test422_512
+	./main Inputfile/test4224 > Outputfile/test422_1024
+test423:
+	./main Inputfile/test4231 > Outputfile/test423_128
+	./main Inputfile/test4232 > Outputfile/test423_256
+	./main Inputfile/test4233 > Outputfile/test423_512
+	./main Inputfile/test4234 > Outputfile/test423_1024
+test424:
+	./main Inputfile/test4241 > Outputfile/test424_128
+	./main Inputfile/test4242 > Outputfile/test424_256
+	./main Inputfile/test4243 > Outputfile/test424_512
+	./main Inputfile/test4244 > Outputfile/test424_1024
+test431:
+	./main Inputfile/test431
+test432:
+	./main Inputfile/test432
+test433:
+	./main Inputfile/test433
+test434:
+	./main Inputfile/test434
 cleant:
 	rm *.o
 	rm test
