--- a/project2/Makefile
+++ b/project2/Makefile
@@ -2,14 +2,87 @@ all: main.o Multigrid.h
 	g++ -o main main.o Multigrid.h -lblas -std=c++11
 main.o:
 	g++ -c main.cpp -std=c++11
-clean:
-	rm *.o
-	rm main
-	rm *.m
-test:
-	./main Inputfile/test
-test1:
-	./main Inputfile/test1 > data
+run:
+	make
+	echo Part 1, display of solution effect.
+	echo For nonhomogeneous case,
+	./main Inputfile/test01
+	matlab -nodesktop -nosplash -r V_cycle_show_128
+	echo For homogeneous case,
+	./main Inputfile/test02
+	matlab -nodesktop -nosplash -r fm_cycle_show_1024
+	echo Part 2, analysis of V-cycle for nonhomogeneous case.
+	echo For full-weighting and linear interpolation,
+	make test231
+	echo n = 128,
+	matlab -nodesktop -nosplash -r V_cycle_128
+	echo n = 256,
+	matlab -nodesktop -nosplash -r V_cycle_256
+	echo n = 512,
+	matlab -nodesktop -nosplash -r V_cycle_512
+	echo n = 1024,
+	matlab -nodesktop -nosplash -r V_cycle_1024
+	echo The maximum norm of the error vector can be found in corresponding output file.
+	echo For full-weighting and quadratic interpolation,
+	make test232
+	echo n = 128,
+	matlab -nodesktop -nosplash -r V_cycle_128
+	echo n = 256,
+	matlab -nodesktop -nosplash -r V_cycle_256
+	echo n = 512,
+	matlab -nodesktop -nosplash -r V_cycle_512
+	echo n = 1024,
+	matlab -nodesktop -nosplash -r V_cycle_1024
+	echo The maximum norm of the error vector can be found in corresponding output file.
+	echo For injection and linear interpolation,
+	make test233
+	echo n = 128,
+	matlab -nodesktop -nosplash -r V_cycle_128
+	echo n = 256,
+	matlab -nodesktop -nosplash -r V_cycle_256
+	echo n = 512,
+	matlab -nodesktop -nosplash -r V_cycle_512
+	echo n = 1024,
+	matlab -nodesktop -nosplash -r V_cycle_1024
+	echo The maximum norm of the error vector can be found in corresponding output file.
+	echo For injection and quadratic interpolation,
+	make test234
+	echo n = 128,
+	matlab -nodesktop -nosplash -r V_cycle_128
+	echo n = 256,
+	matlab -nodesktop -nosplash -r V_cycle_256
+	echo n = 512,
+	matlab -nodesktop -nosplash -r V_cycle_512
+	echo n = 1024,
+	matlab -nodesktop -nosplash -r V_cycle_1024
+	echo The maximum norm of the error vector can be found in corresponding output file.
+	echo Part 3, analysis of full multigrid cycle for nonhomogeneous case.
+	echo For full-weighting and linear interpolation,
+	make test241
+	echo For full-weighting and quadratic interpolation,
+	make test242
+	echo For injection and linear interpolation,
+	make test243
+	echo For injection and quadratic interpolation,
+	echo test244
+	echo Part 4, find critical value of relative accuracy.
+	make test3
+	echo Part 5, analysis of V-cycle for homogeneous case. Only show one group.
+	echo For full-weighting and linear interpolation,
+	make test421
+	echo n = 128,
+	matlab -nodesktop -nosplash -r V_cycle_128
+	echo n = 256,
+	matlab -nodesktop -nosplash -r V_cycle_256
+	echo n = 512,
+	matlab -nodesktop -nosplash -r V_cycle_512
+	echo n = 1024,
+	matlab -nodesktop -nosplash -r V_cycle_1024
+	echo The maximum norm of the error vector can be found in corresponding output file.
+	echo Part 6, analysis of full multigrid cycle for homogeneous case. Only show one group.
+	echo For injection and quadratic interpolation,
+	make test434
+	echo All tests have done. Use "make clean" to clean all .m file.
 test22:
 	./main Inputfile/test22
 test231:
@@ -79,7 +152,25 @@ test433:
 	./main Inputfile/test433
 test434:
 	./main Inputfile/test434
-cleant:
+answers: answers.tex
+	xelatex answers
+	xelatex answers
+	echo You can get detailed answers to problems in Section 1 by opening answers.pdf, and run tests by using command "make run".Exit matlab to get the next plot.
+math: math.tex
+	xelatex math
+	xelatex math
+	echo You can get the math document by opening math.pdf, and run tests by using command "make run".Exit matlab to get the next plot.
+design: design.tex
+	xelatex design
+	xelatex design
+	echo You can get the degisn document by opening design.pdf, and run tests by using command "make run".Exit matlab to get the next plot.
+cleanr:
+	rm *.pdf
+	rm *.aux
+	rm *.log
+clean:
+	rm *.m
+cleanm:
 	rm *.o
-	rm test
+	rm main
 	rm *.m
