Implement MPI parallel.

--- a/Newproject2/CMakeLists.txt
+++ b/Newproject2/CMakeLists.txt
@@ -29,13 +29,14 @@ pkg_check_modules(LAPACK REQUIRED lapack)
 pkg_check_modules(LAPACKE REQUIRED lapacke)
 pkg_check_modules(CPPUNIT REQUIRED cppunit)
 pkg_check_modules(JSONCPP REQUIRED jsoncpp)
+pkg_check_modules(MPI REQUIRED mpi)
 
 include_directories(${BLAS_INCLUDE_DIRS} ${CBLAS_INCLUDE_DIRS}
   ${LAPACK_INCLUDE_DIRS} ${LAPACKE_INCLUDE_DIRS}
-  ${CPPUNIT_INCLUDE_DIRS} ${JSONCPP_INCLUDE_DIRS})
+  ${CPPUNIT_INCLUDE_DIRS} ${JSONCPP_INCLUDE_DIRS} ${MPI_INCLUDE_DIRS})
 link_directories(${BLAS_LIBRARY_DIRS} ${CBLAS_LIBRARY_DIRS}
   ${LAPACK_LIBRARY_DIRS} ${LAPACKE_LIBRARY_DIRS}
-  ${CPPUNIT_LIBRARY_DIRS} ${JSONCPP_LIBRARY_DIRS})
+  ${CPPUNIT_LIBRARY_DIRS} ${JSONCPP_LIBRARY_DIRS} ${MPI_LIBRARY_DIRS})
 
 enable_testing()
 include_directories(src)
