--- a/Newproject2/src/CMakeLists.txt
+++ b/Newproject2/src/CMakeLists.txt
@@ -6,4 +6,4 @@ add_subdirectory(Multigrid)
 add_library(bays STATIC ${Core_Files} ${RegularGrid_Files}
   ${Multigrid_Files})
 target_link_libraries(bays ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES}
-  ${LAPACKE_LIBRARIES} ${JSONCPP_LIBRARIES} gfortran)
+  ${LAPACKE_LIBRARIES} ${JSONCPP_LIBRARIES} ${MPI_LIBRARIES} gfortran)
